--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,42 @@
-Flask-WTF
-flask-login
-flask-bcrypt
-hypercorn
-Pillow
-psycopg2-binary
-python-dotenv
-qrcode
-redis
-peewee
-requests
-WTForms
-flask-session
-flask
-monero
-arrow
-flake8
+arrow==1.2.3
+async-timeout==4.0.2
+cachelib==0.9.0
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+flake8==6.0.0
+Flask==2.2.2
+Flask-Login==0.6.2
+Flask-Session==0.4.0
+Flask-WTF==1.0.1
+gunicorn==20.1.0
+idna==3.4
+importlib-metadata==5.1.0
+ipaddress==1.0.23
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+mccabe==0.7.0
+monero==1.1.1
+packaging==21.3
+peewee==3.15.4
+Pillow==9.3.0
+pycodestyle==2.10.0
+pycparser==2.21
+pycryptodomex==3.16.0
+pyflakes==3.0.1
+PyNaCl==1.5.0
+pyparsing==3.0.9
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+qrcode==7.3.1
+redis==4.3.5
+requests==2.28.1
+six==1.16.0
+urllib3==1.26.13
+varint==1.0.2
+Werkzeug==2.2.2
+WTForms==3.0.1
+zipp==3.11.0
