--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 mccabe==0.7.0
 monero==1.1.1
+numpy==1.23.5
+opencv-python-headless==4.6.0.66
 packaging==21.3
 peewee==3.15.4
 Pillow==9.3.0
